Make SKAdNetwork items lowercased

--- a/AppodealObjectiveCDemo/AppodealObjectiveCDemo/Info.plist
+++ b/AppodealObjectiveCDemo/AppodealObjectiveCDemo/Info.plist
@@ -43,207 +43,203 @@
     <array>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>4PFYVQ9L8R.skadnetwork</string>
+            <string>4pfyvq9l8r.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>YCLNXRL5PM.skadnetwork</string>
+            <string>yclnxrl5pm.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>V72QYCH5UU.skadnetwork</string>
+            <string>v72qych5uu.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>TL55SBB4FM.skadnetwork</string>
+            <string>tl55sbb4fm.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>T38B2KH725.skadnetwork</string>
+            <string>t38b2kh725.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>PRCB7NJMU6.skadnetwork</string>
+            <string>prcb7njmu6.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>PPXM28T8AP.skadnetwork</string>
+            <string>ppxm28t8ap.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>MLMMFZH3R3.skadnetwork</string>
+            <string>mlmmfzh3r3.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>KLF5C3L5U5.skadnetwork</string>
+            <string>klf5c3l5u5.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>HS6BDUKANM.skadnetwork</string>
+            <string>hs6bdukanm.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>C6K4G5QG8M.skadnetwork</string>
+            <string>c6k4g5qg8m.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>9T245VHMPL.skadnetwork</string>
+            <string>9t245vhmpl.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>9RD848Q2BZ.skadnetwork</string>
+            <string>9rd848q2bz.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>8S468MFL3Y.skadnetwork</string>
+            <string>8s468mfl3y.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>7UG5ZH24HU.skadnetwork</string>
+            <string>7ug5zh24hu.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>4FZDC2EVR5.skadnetwork</string>
+            <string>4fzdc2evr5.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>4468KM3ULZ.skadnetwork</string>
+            <string>4468km3ulz.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>3RD42EKR43.skadnetwork</string>
+            <string>3rd42ekr43.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>2U9PT9HC89.skadnetwork</string>
+            <string>2u9pt9hc89.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>M8DBW4SV7C.skadnetwork</string>
+            <string>m8dbw4sv7c.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>7RZ58N8NTL.skadnetwork</string>
+            <string>7rz58n8ntl.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>EJVT5QM6AK.skadnetwork</string>
+            <string>ejvt5qm6ak.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>5LM9LJ6JB7.skadnetwork</string>
+            <string>5lm9lj6jb7.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>44JX6755AQ.skadnetwork</string>
+            <string>44jx6755aq.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>MTKV5XTK9E.skadnetwork</string>
+            <string>mtkv5xtk9e.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>LUDVB6Z3BS.skadnetwork</string>
+            <string>ludvb6z3bs.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>WG4VFF78ZM.skadnetwork</string>
+            <string>wg4vff78zm.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>737Z793B9F.skadnetwork</string>
+            <string>737z793b9f.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>YDX93A7ASS.skadnetwork</string>
+            <string>ydx93a7ass.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>W9Q455WK68.skadnetwork</string>
+            <string>w9q455wk68.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>GLQZH8VGBY.skadnetwork</string>
+            <string>glqzh8vgby.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>AV6W8KGT66.skadnetwork</string>
+            <string>cstr6suwn9.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>CJ5566H2GA.skadnetwork</string>
+            <string>su67r6k2v3.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>F38H382JLK.skadnetwork</string>
+            <string>kbd757ywx3.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>CSTR6SUWN9.skadnetwork</string>
+            <string>zmvfpc5aq8.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>SU67R6K2V3.skadnetwork</string>
+            <string>44n7hlldy6.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>KBD757YWX3.skadnetwork</string>
+            <string>3sh42y64q3.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>44N7HLLDY6.skadnetwork</string>
+            <string>4dzt52r2t5.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>238DA6JT44.skadnetwork</string>
+            <string>f38h382jlk.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>488R3Q3DTQ.skadnetwork</string>
+            <string>22mmun2rn5.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>WZMMZ9FP6W.skadnetwork</string>
+            <string>wzmmz9fp6w.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>5A6FLPKH64.skadnetwork</string>
+            <string>lr83yxwka7.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>4DZT52R2T5.skadnetwork</string>
+            <string>5a6flpkh64.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>22MMUN2RN5.skadnetwork</string>
+            <string>238da6jt44.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>F73KDQ92P3.skadnetwork</string>
+            <string>488r3q3dtq.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>424M5254LK.skadnetwork</string>
+            <string>v79kvwwj4g.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>LR83YXWKA7.skadnetwork</string>
+            <string>424m5254lk.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>ZMVFPC5AQ8.skadnetwork</string>
+            <string>bvpn9ufa9b.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>V79KVWWJ4G.skadnetwork</string>
+            <string>av6w8kgt66.skadnetwork</string>
         </dict>
         <dict>
             <key>SKAdNetworkIdentifier</key>
-            <string>3SH42Y64Q3.skadnetwork</string>
-        </dict>
-        <dict>
-            <key>SKAdNetworkIdentifier</key>
-            <string>BVPN9UFA9B.skadnetwork</string>
+            <string>f73kdq92p3.skadnetwork</string>
         </dict>
     </array>
 	<key>UILaunchStoryboardName</key>
