Update SKAdNetwork Items

--- a/AppodealSwiftDemo/AppodealSwiftDemo/Info.plist
+++ b/AppodealSwiftDemo/AppodealSwiftDemo/Info.plist
@@ -471,11 +471,27 @@
             </dict>
             <dict>
                 <key>SKAdNetworkIdentifier</key>
+                <string>cp8zw746q7.skadnetwork</string>
+            </dict>
+            <dict>
+                <key>SKAdNetworkIdentifier</key>
                 <string>3qy4746246.skadnetwork</string>
             </dict>
             <dict>
                 <key>SKAdNetworkIdentifier</key>
                 <string>v4nxqhlyqp.skadnetwork</string>
+            </dict>
+            <dict>
+                <key>SKAdNetworkIdentifier</key>
+                <string>y5ghdn5j9k.skadnetwork</string>
+            </dict>
+            <dict>
+                <key>SKAdNetworkIdentifier</key>
+                <string>47vhws6wlr.skadnetwork</string>
+            </dict>
+            <dict>
+                <key>SKAdNetworkIdentifier</key>
+                <string>ecpz2srf59.skadnetwork</string>
             </dict>
             <dict>
                 <key>SKAdNetworkIdentifier</key>
@@ -527,11 +543,11 @@
             </dict>
             <dict>
                 <key>SKAdNetworkIdentifier</key>
-                <string>f7s53z58qe.skadnetwork</string>
+                <string>238da6jt44.skadnetwork</string>
             </dict>
             <dict>
                 <key>SKAdNetworkIdentifier</key>
-                <string>238da6jt44.skadnetwork</string>
+                <string>f7s53z58qe.skadnetwork</string>
             </dict>
             <dict>
                 <key>SKAdNetworkIdentifier</key>
