--- a/AppodealObjectiveCDemo/AppodealObjectiveCDemo/Info.plist
+++ b/AppodealObjectiveCDemo/AppodealObjectiveCDemo/Info.plist
@@ -443,6 +443,26 @@
             </dict>
             <dict>
                 <key>SKAdNetworkIdentifier</key>
+                <string>24zw6aqk47.skadnetwork</string>
+            </dict>
+            <dict>
+                <key>SKAdNetworkIdentifier</key>
+                <string>cs644xg564.skadnetwork</string>
+            </dict>
+            <dict>
+                <key>SKAdNetworkIdentifier</key>
+                <string>9vvzujtq5s.skadnetwork</string>
+            </dict>
+            <dict>
+                <key>SKAdNetworkIdentifier</key>
+                <string>c3frkrj4fj.skadnetwork</string>
+            </dict>
+            <dict>
+                <key>SKAdNetworkIdentifier</key>
+                <string>8r8llnkz5a.skadnetwork</string>
+            </dict>
+            <dict>
+                <key>SKAdNetworkIdentifier</key>
                 <string>x8uqf25wch.skadnetwork</string>
             </dict>
             <dict>
@@ -456,10 +476,6 @@
             <dict>
                 <key>SKAdNetworkIdentifier</key>
                 <string>krvm3zuq6h.skadnetwork</string>
-            </dict>
-            <dict>
-                <key>SKAdNetworkIdentifier</key>
-                <string>c3frkrj4fj.skadnetwork</string>
             </dict>
             <dict>
                 <key>SKAdNetworkIdentifier</key>
@@ -500,10 +516,6 @@
             <dict>
                 <key>SKAdNetworkIdentifier</key>
                 <string>8c4e2ghe7u.skadnetwork</string>
-            </dict>
-            <dict>
-                <key>SKAdNetworkIdentifier</key>
-                <string>r26jy69rpl.skadnetwork</string>
             </dict>
             <dict>
                 <key>SKAdNetworkIdentifier</key>
@@ -551,11 +563,11 @@
             </dict>
             <dict>
                 <key>SKAdNetworkIdentifier</key>
-                <string>f7s53z58qe.skadnetwork</string>
+                <string>v79kvwwj4g.skadnetwork</string>
             </dict>
             <dict>
                 <key>SKAdNetworkIdentifier</key>
-                <string>v79kvwwj4g.skadnetwork</string>
+                <string>f7s53z58qe.skadnetwork</string>
             </dict>
             <dict>
                 <key>SKAdNetworkIdentifier</key>
