--- a/AppodealSwiftUIDemo/AppodealSwiftUIDemo/Info.plist
+++ b/AppodealSwiftUIDemo/AppodealSwiftUIDemo/Info.plist
@@ -433,6 +433,26 @@
             </dict>
             <dict>
                 <key>SKAdNetworkIdentifier</key>
+                <string>24zw6aqk47.skadnetwork</string>
+            </dict>
+            <dict>
+                <key>SKAdNetworkIdentifier</key>
+                <string>cs644xg564.skadnetwork</string>
+            </dict>
+            <dict>
+                <key>SKAdNetworkIdentifier</key>
+                <string>9vvzujtq5s.skadnetwork</string>
+            </dict>
+            <dict>
+                <key>SKAdNetworkIdentifier</key>
+                <string>c3frkrj4fj.skadnetwork</string>
+            </dict>
+            <dict>
+                <key>SKAdNetworkIdentifier</key>
+                <string>8r8llnkz5a.skadnetwork</string>
+            </dict>
+            <dict>
+                <key>SKAdNetworkIdentifier</key>
                 <string>x8uqf25wch.skadnetwork</string>
             </dict>
             <dict>
@@ -446,10 +466,6 @@
             <dict>
                 <key>SKAdNetworkIdentifier</key>
                 <string>krvm3zuq6h.skadnetwork</string>
-            </dict>
-            <dict>
-                <key>SKAdNetworkIdentifier</key>
-                <string>c3frkrj4fj.skadnetwork</string>
             </dict>
             <dict>
                 <key>SKAdNetworkIdentifier</key>
@@ -490,10 +506,6 @@
             <dict>
                 <key>SKAdNetworkIdentifier</key>
                 <string>8c4e2ghe7u.skadnetwork</string>
-            </dict>
-            <dict>
-                <key>SKAdNetworkIdentifier</key>
-                <string>r26jy69rpl.skadnetwork</string>
             </dict>
             <dict>
                 <key>SKAdNetworkIdentifier</key>
@@ -541,11 +553,11 @@
             </dict>
             <dict>
                 <key>SKAdNetworkIdentifier</key>
-                <string>f7s53z58qe.skadnetwork</string>
+                <string>v79kvwwj4g.skadnetwork</string>
             </dict>
             <dict>
                 <key>SKAdNetworkIdentifier</key>
-                <string>v79kvwwj4g.skadnetwork</string>
+                <string>f7s53z58qe.skadnetwork</string>
             </dict>
             <dict>
                 <key>SKAdNetworkIdentifier</key>
