--- a/.github/workflows/uitests.yaml
+++ b/.github/workflows/uitests.yaml
@@ -41,37 +41,37 @@ jobs:
           name: AppodealSwiftDemo
           path: appodeal-ios-demo/appium/AppodealSwiftDemo.ipa
           retention-days: 14
+          
+  tests:
+    name: run ui tests on aws with appium
+    needs: build
+    runs-on: ${{ github.event.inputs.runner || 'debugmachine' }}
+    timeout-minutes: 30
+    steps:
+      - name: Print Env Variables
+        run: env
+        working-directory: ${{ github.workspace }}
 
-#  tests:
-#    name: run ui tests on aws with appium
-#    needs: build
-#    runs-on: ${{ github.event.inputs.runner || 'debugmachine' }}
-#    timeout-minutes: 30
-#    steps:
-#      - name: Print Env Variables
-#        run: env
-#        working-directory: ${{ github.workspace }}
-#
-#      - name: checkout source code of application
-#        uses: actions/checkout@v4
-#        with:
-#          path: 'SDK-Auto-Test'
-#          clean: true
-#          repository: 'appodeal/SDK-Auto-Test'
-#          ref: 'aws'
-#          token: ${{ secrets.UITESTREPOACCESS }}
-#
-#      - name: Set up JDK 11
-#        uses: actions/setup-java@v4
-#        with:
-#          java-version: '11'
-#          distribution: 'temurin'
-#
-#      - name: download debug build
-#        uses: actions/download-artifact@v4
-#        with:
-#          name: banner-debug.apk
-#          path: ./SDK-Auto-Test/apk
+      - name: checkout source code of appium tests
+        uses: actions/checkout@v4
+        with:
+          path: 'SDK-Auto-Test'
+          clean: true
+          repository: 'appodeal/SDK-Auto-Test'
+          ref: 'aws'
+          token: ${{ secrets.UITESTREPOACCESS }}
+
+      - name: Set up JDK 11
+        uses: actions/setup-java@v4
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+
+      - name: download debug build
+        uses: actions/download-artifact@v4
+        with:
+          name: AppodealSwiftDemo
+          path: ./SDK-Auto-Test/ipa
 #
 #      - name: prepare build
 #        working-directory: ${{ github.workspace }}/SDK-Auto-Test
