--- a/.github/workflows/uitests.yaml
+++ b/.github/workflows/uitests.yaml
@@ -128,7 +128,7 @@ jobs:
                 "name": "GitHubAction-${{ github.workflow }}_${{ github.run_id }}_${{ github.run_attempt }}",
                 "projectArn": "arn:aws:devicefarm:us-west-2:381491970378:project:4c28c1e5-8344-4d34-919c-a1e9377d3b2f",
                 "appArn": "${{ env.APP_ARN }}",
-                "devicePoolArn": "arn:aws:devicefarm:us-west-2:381491970378:run:4c28c1e5-8344-4d34-919c-a1e9377d3b2f/5d86aa35-762e-4282-a93b-9ecbd812c2b4",
+                "devicePoolArn": "arn:aws:devicefarm:us-west-2:381491970378:devicepool:4c28c1e5-8344-4d34-919c-a1e9377d3b2f/86ebd86a-2150-4997-b71f-2e3d72510e0d",
                 "test": {
                   "type": "APPIUM_JAVA_TESTNG",
                   "testPackageArn": "${{ env.TEST_PACKAGE_ARN }}",
